# frp_rl

./: .gitignore  LICENCE  README.md  pyproject.toml  requirements.txt
diagrams/algorithm/: key_diagram.py
diagrams/cayley_Fn/: free_hyperbolic.py  orthogonal_curve.py
diagrams/cayley_mobius/: geodesic.py  mobius.py
diagrams/cayley_so3/: free_in_so3.py
figures_post_wandb/cartpole/: plot.py  plot_v2.py
figures_post_wandb/lsmdp/: wandb_sweep_plotter.py
figures_post_wandb/popjaxrl/: dim_plots_README.md  final_results_plot.py  plot_dim_results.py  plot_dim_results.sh  plot_final_results.sh  plot_time_series.sh  preprocess_and_time_series.py  preprocess_for_dim_plots.py
frp_popjaxrl/: README.md  run_meta_popgym.py  run_popgym.py
frp_popjaxrl/algorithms/: ppo_gru_in_context.py  ppo_gru_origin.py  ppo_s5_in_context.py  ppo_s5_origin.py  s5.py
frp_popjaxrl/envs/: meta_environment.py  registration.py  wrappers.py
frp_popjaxrl/frp/: orthogonal.py
frp_popjaxrl/tests/: test_jax.py  test_meta_envs_integration_with_run.py
lsmdp/: README.md  lsmdp_experiment.py  main.py  policy_aggregation_experiment.py  visualize_environments.py
lsmdp/lsmdp/: cost_distributions.py  meta_lsmdp.py  policy_aggregation.py  solver.py  transition_models.py  visualization.py
lsmdp/scripts/: meta_lsmdp_README.md  meta_lsmdp_comparison.py  meta_lsmdp_comparison_README.md  meta_lsmdp_main.py  meta_lsmdp_main_README.md
lsmdp/sweep/: one_leaf_goal_birirec_tree.yaml
spectrum/: README.md  eigs_multi.py  eigs_multi_average.py  eigs_multi_block.py  eigs_multi_tensor.py  run_batch.sh
(+43 files in other folders)
