[project]
name = "frp_rl"
version = "0.1.0"
description = "Free Random Projection for In-Context Reinforcement Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.88",
    "distrax==0.1.5",
    "flax==0.10.3",
    "gym==0.26.2",
    "gym-notices==0.0.8",
    "gymnax==0.0.6",
    "jax[cuda12]==0.5.0",
    "jaxlib==0.5.0",
    "jaxopt==0.8",
    "optax==0.1.7",
    "scipy==1.12.0",
    "einops==0.8.0",
    "wandb",
    "matplotlib",
    "ipython",
    "pandas",
    "seaborn",
    "tqdm",
    "networkx",
    "pytest",
]

[dependency-groups]
dev = []

[[tool.rye.sources]]

[tool.uv.sources]

